--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,6 +7,7 @@ author_profile: true
 
 {% include base_path %}
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+<h1>Teaching</h1>
+<ul>
+<li>Under construction (will be under construction until around late 2024).</li>
+</ul>
