--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -8,7 +8,7 @@ author_profile: true
 
 <h1>Journals</h1>
 <ul>
-<li><b>Optimizing Pilot Spacing in MU-MIMO Systems Operating Over Aging Channels</b> [<a href="http://dogagurgun.github.io/files/papers/sampling.pdf" style="color:#64B2CB">pdf</a>] [<a href="https://ieeexplore.ieee.org/document/10081088" style="color:#64B2CB">link</a>]<br>
+<li><b>Optimizing Pilot Spacing in MU-MIMO Systems Operating Over Aging Channels</b> [pdf] [<a href="https://ieeexplore.ieee.org/document/10081088" style="color:#64B2CB">link</a>]<br>
 Sebastian Fodor, Gábor Fodor, Doğa Gürgünoğlu, and Miklós Telek, <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=26" style="color:#64B2CB">IEEE Transactions on Communications</a>, 2023.</li>
 <li><b>Power Adaptation for Vector Parameter Estimation According to Fisher Information Based Optimality Criteria</b> [<a href="http://dogagurgun.github.io/files/papers/optpow.pdf" style="color:#64B2CB">pdf</a>] [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0165168421004278" style="color:#64B2CB">link</a>]<br>
 Doğa Gürgünoğlu, Berkan Dülek, and Sinan Gezici, <a href="https://www.sciencedirect.com/journal/signal-processing" style="color:#64B2CB">Elsevier Signal Processing</a>, 2022.</li>
