--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -21,7 +21,7 @@ Doğa Gürgünoğlu, Çağrı Göken, and Sinan Gezici, <a href="https://ieeexpl
 <ul>
 <li><b>Impact of Pilot Contamination Between Operators With Interfering Reconfigurable Intelligent Surfaces</b> [<a href="http://dogagurgun.github.io/files/papers/BlackSeaCom23_CameraReady.pdf" style="color:#64B2CB">pdf</a>]<br>
 Doğa Gürgünoğlu, Emil Björnson, and Gabor Fodor, IEEE Black Sea Communications Conference 2023 (<a href="https://blackseacom2023.ieee-blackseacom.org/" style="color:#64B2CB">BlackSeaCom</a>), Istanbul, Turkiye, July 2023.</li>
-<li><b>Deep Reinforcement Learning Based Joint Downlink Beamforming and RIS Configuration in RIS-aided MU-MISO Systems Under Hardware Impairments and Imperfect CSI [<a href="http://dogagurgun.github.io/files/papers/ICC23_CameraReady.pdf" style="color:#64B2CB">pdf</a>]</b><br>
+<li><b>Deep Reinforcement Learning Based Joint Downlink Beamforming and RIS Configuration in RIS-aided MU-MISO Systems Under Hardware Impairments and Imperfect CSI</b> [<a href="http://dogagurgun.github.io/files/papers/ICC23_CameraReady.pdf" style="color:#64B2CB">pdf</a>]<br>
 Baturay Sağlam, Doğa Gürgünoğlu and Süleyman S. Kozat, IEEE International Conference on Communications (<a href="https://icc2023.ieee-icc.org/" style="color:#64B2CB">ICC</a>) 2023 Workshops, Rome, Italy, May-June 2023.</li>
 <li><b>Channel Estimation Methods for 5G Physical Uplink Control Channels</b> [<a href="http://dogagurgun.github.io/files/papers/siu2020.pdf" style="color:#64B2CB">pdf</a>]<br>
 Doğa Gürgünoğlu and Sinan Gezici, IEEE Signal Processing and Communication Applications Conference (<a href="https://ieeexplore.ieee.org/xpl/conhome/9302025/proceeding" style="color:#64B2CB">SIU</a>), Virtual, November 2020.</li>
