--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -8,6 +8,8 @@ author_profile: true
 
 <h1>Journals</h1>
 <ul>
+<li><b>Combating Inter-Operator Pilot Contamination in Reconfigurable Intelligent Surfaces Assisted Multi-Operator Networks</b> [<a href="http://dogagurgun.github.io/files/papers/Gurgunoglu2023_arXiv.pdf" style="color:#64B2CB">pdf</a>] [<a href="https://arxiv.org/abs/2311.01151" style="color:#64B2CB">arXiv</a>]<br>
+Doğa Gürgünoğlu, Emil Björnson, and Gábor Fodor, 2023. (Under Review)</li>
 <li><b>Optimizing Pilot Spacing in MU-MIMO Systems Operating Over Aging Channels</b> [<a href="http://dogagurgun.github.io/files/papers/sampling.pdf" style="color:#64B2CB">pdf</a>] [<a href="https://ieeexplore.ieee.org/document/10081088" style="color:#64B2CB">link</a>]<br>
 Sebastian Fodor, Gábor Fodor, Doğa Gürgünoğlu, and Miklós Telek, <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=26" style="color:#64B2CB">IEEE Transactions on Communications</a>, 2023.</li>
 <li><b>Power Adaptation for Vector Parameter Estimation According to Fisher Information Based Optimality Criteria</b> [<a href="http://dogagurgun.github.io/files/papers/optpow.pdf" style="color:#64B2CB">pdf</a>] [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0165168421004278" style="color:#64B2CB">link</a>]<br>
