--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -8,6 +8,8 @@ author_profile: true
 
 <h1>Journals</h1>
 <ul>
+<li><b>Joint Pilot-Based Localization and Channel Estimation in RIS-Aided Communication Systems</b> [pdf] [link]<br>
+Doğa Gürgünoğlu, Emil Björnson, and Gábor Fodor, 2024. (Under Review)</li>
 <li><b>Combating Inter-Operator Pilot Contamination in Reconfigurable Intelligent Surfaces Assisted Multi-Operator Networks</b> [<a href="http://dogagurgun.github.io/files/papers/Gurgunoglu2023_arXiv.pdf" style="color:#64B2CB">pdf</a>] [<a href="https://arxiv.org/abs/2311.01151" style="color:#64B2CB">arXiv</a>]<br>
 Doğa Gürgünoğlu, Emil Björnson, and Gábor Fodor, 2023. (Under Review)</li>
 <li><b>Optimizing Pilot Spacing in MU-MIMO Systems Operating Over Aging Channels</b> [<a href="http://dogagurgun.github.io/files/papers/sampling.pdf" style="color:#64B2CB">pdf</a>] [<a href="https://ieeexplore.ieee.org/document/10081088" style="color:#64B2CB">link</a>]<br>
