--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -8,6 +8,8 @@ author_profile: true
 
 <h1>Journals</h1>
 <ul>
+<li><b>Performance Analysis of a 2D-MUSIC Algorithm for Parametric Near-Field Channel Estimation</b> [<a href="http://dogagurgun.github.io/files/papers/Gurgunoglu2025_WCL.pdf" style="color:#64B2CB">pdf</a>] [link]<br>
+Doğa Gürgünoğlu, Alva Kosasih, Parisa Ramezani, Özlem Tuğfe Demir, Emil Björnson, and Gábor Fodor, <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=5962382" style="color:#64B2CB">IEEE Wireless Communications Letters</a>, 2025 (to appear).</li>
 <li><b>Joint Pilot-Based Localization and Channel Estimation in RIS-Aided Communication Systems</b> [<a href="http://dogagurgun.github.io/files/papers/Gurgunoglu2024_WCL.pdf" style="color:#64B2CB">pdf</a>] [<a href="https://ieeexplore.ieee.org/document/10664026" style="color:#64B2CB">link</a>]<br>
 Doğa Gürgünoğlu, Emil Björnson, and Gábor Fodor, <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=5962382" style="color:#64B2CB">IEEE Wireless Communications Letters</a>, 2024.</li>
 <li><b>Combating Inter-Operator Pilot Contamination in Reconfigurable Intelligent Surfaces Assisted Multi-Operator Networks</b> [<a href="http://dogagurgun.github.io/files/papers/Gurgunoglu2023_TCOM.pdf" style="color:#64B2CB">pdf</a>] [<a href="https://ieeexplore.ieee.org/document/10504275" style="color:#64B2CB">link</a>]<br>
