--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -5,8 +5,9 @@ author_profile: true
 ---
 
 {% include base_path %}
-
-<h1>Journals</h1>
+<h1>Publications</h1>
+<br>
+<h2>Journal Articles</h2>
 <ol reversed>
 <li><b>Doğa Gürgünoğlu</b>, Alva Kosasih, Parisa Ramezani, Özlem Tuğfe Demir, Emil Björnson, and Gábor Fodor,"Performance Analysis of a 2D-MUSIC Algorithm for Parametric Near-Field Channel Estimation", <i>IEEE Wireless Communications Letters</i>, 2025. [<a href="http://dogagurgun.github.io/files/papers/Gurgunoglu2025_WCL.pdf" style="color:#64B2CB">pdf</a>] [<a https://ieeexplore.ieee.org/document/10908613>link</a>]</li>
 <li><b>Doğa Gürgünoğlu</b>, Emil Björnson, and Gábor Fodor, “Joint Pilot-Based Localization and Channel Estimation in RIS-Aided Communication Systems”, <i>IEEE Wireless Communications Letters</i>, 2024.</li>
@@ -14,16 +15,21 @@ author_profile: true
 <li>Sebastian Fodor, Gábor Fodor, <b>Doğa Gürgünoğlu</b>, and Miklós Telek, “Optimizing Pilot Spacing in MU-MIMO Systems Operating Over Aging Channels”, <i>IEEE Transactions on Communications</i>, 2024. [<a href="http://dogagurgun.github.io/files/papers/sampling.pdf" style="color:#64B2CB">pdf</a>] [<a href="https://ieeexplore.ieee.org/document/10081088" style="color:#64B2CB">link</a>]</li>
 <li><b>Doğa Gürgünoğlu</b>, Berkan Dülek, and Sinan Gezici, “Power Adaptation for Vector Parameter Estimation According to Fisher Information Based Optimality Criteria”, <i>Signal Processing</i>, 2022. [<a href="http://dogagurgun.github.io/files/papers/optpow.pdf" style="color:#64B2CB">pdf</a>] [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0165168421004278" style="color:#64B2CB">link</a>]</li>
 <li><b>Doğa Gürgünoğlu</b>, Çağrı Göken, and Sinan Gezici, “Optimal Power Allocation for Secure Estimation of Multiple Parameters”, <i>IEEE Signal Processing Letters</i>, 2021. [<a href="http://dogagurgun.github.io/files/papers/optpowsec.pdf" style="color:#64B2CB">pdf</a>] [<a href="https://ieeexplore.ieee.org/document/9511817" style="color:#64B2CB">link</a>]</li>
-<li><b>Optimal Power Allocation for Secure Estimation of Multiple Parameters</b> [<a href="http://dogagurgun.github.io/files/papers/optpowsec.pdf" style="color:#64B2CB">pdf</a>] [<a href="https://ieeexplore.ieee.org/document/9511817" style="color:#64B2CB">link</a>]<br>
-Doğa Gürgünoğlu, Çağrı Göken, and Sinan Gezici, <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=97" style="color:#64B2CB">IEEE Signal Processing Letters</a>, 2021.</li>
 </ol>
 
 <br>
-<h1>Conferences and Workshops</h1>
+<h2>Conference Proceedings and Workshop Papers</h2>
 <ol reversed>
 <li><b>Doğa Gürgünoğlu</b>, Emil Björnson, and Gábor Fodor, “Impact of Pilot Contamination Between Operators With Interfering Reconfigurable Intelligent Surfaces”, <i>IEEE Black Sea Communications Conference 2023</i>, Istanbul, Türkiye, July 2023. [<a href="http://dogagurgun.github.io/files/papers/BlackSeaCom23_CameraReady.pdf" style="color:#64B2CB">pdf</a>] [<a href="https://ieeexplore.ieee.org/document/10299699" style="color:#64B2CB">link</a>]</li>
 <li>Baturay Sağlam, <b>Doğa Gürgünoğlu</b>, and Süleyman S. Kozat, “Deep Reinforcement Learning Based Joint Downlink Beamforming and RIS Configuration in RIS-aided MU-MISO Systems Under Hardware Impairments and Imperfect CSI”, <i>IEEE International Conference on Communications (ICC) Workshops 2023</i>, Rome, Italy, May-June 2023. [<a href="https://dogagurgun.github.io/files/papers/ICC23_CameraReady.pdf" style="color:#64B2CB">pdf</a>] [<a href="https://ieeexplore.ieee.org/document/10283517" style="color:#64B2CB">link</a>]</li>
 <li><b>Doğa Gürgünoğlu</b> and Sinan Gezici, “Channel Estimation Methods for 5G Physical Uplink Control Channels”, <i>IEEE Signal Processing and Communication Applications Conference</i>, Virtual, November 2020. [<a href="http://dogagurgun.github.io/files/papers/siu2020.pdf" style="color:#64B2CB">pdf</a>] [<a href="https://ieeexplore.ieee.org/document/9302058" style="color:#64B2CB">link</a>]</li>
 <li>M. Eren Akbıyık, Çağan Selim Çoban, Elif Aygün, H. Ziya İmammoğlu, <b>Doğa Gürgünoğlu</b>, and Duygu İder, “ThermoCam: Smart Baby Monitoring Assistant”, <i>2020 IEEE 44th Annual Computers, Software, and Applications Conference (COMPSAC)</i>, Madrid, Spain, July 2020. [<a href="http://dogagurgun.github.io/files/papers/compsac.pdf" style="color:#64B2CB">pdf</a>] [<a href="https://ieeexplore.ieee.org/document/9202512" style="color:#64B2CB">link</a>]</li>
 <li>Burak Şahinbaş, <b>Doğa Gürgünoğlu</b> Maximilian Rausch, Dietmar Eggert, and Jörn Thielecke, “Single-input Multiple-output Multi-carrier Wireless Indoor Direction Finding in a Compact Multipath Scenario Using 2.4 GHz ISM Band”, <i>2019 PhotonIcs & Electromagnetics Research Symposium - Spring</i>, Rome, Italy, June 2019. [<a href="http://dogagurgun.github.io/files/papers/simo.pdf" style="color:#64B2CB">pdf</a>] [<a href="https://ieeexplore.ieee.org/document/9017915" style="color:#64B2CB">link</a>]</li>
-</ol>  
+</ol>
+
+<br>
+<h2>Theses</h2>
+<ol reversed>
+<li>Ph.D. Thesis: "Channel Estimation and Interference Mitigation for Reconfigurable Intelligent Surfaces", <i>KTH Royal Institute of Technology, School of Electrical Engineering and Computer Science</i>, March 2025. [<a href="https://kth.diva-portal.org/smash/get/diva2:1931552/FULLTEXT01.pdf" style="color:#64B2CB">link</a>]</li>
+<li>M.Sc. Thesis: "Optimal Power Allocation Techniques for Vector Parameter Estimation with Fisher Information based Objectives", <i>Bilkent University Department of Electrical and Electronics Engineering</i>, June 2021. [<a href="https://repository.bilkent.edu.tr/bitstreams/7f0b803e-40c9-4307-8c20-7eecd7f87826/download" style="color:#64B2CB">link</a>]</li>
+  
