--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -8,5 +8,5 @@ author_profile: true
 {% include base_path %}
 
 <ul>
-<li>Under construction (will be under construction until around late 2024).</li>
+<li>Under construction.</li>
 </ul>
